--- a/client/src/components/pages/OuttagePage/OuttagePage.scss
+++ b/client/src/components/pages/OuttagePage/OuttagePage.scss
@@ -1,5 +1,6 @@
 .outtage-page {
 	display: flex;
+	width: 100%;
 	flex-wrap: wrap;
 
 	.outtage-information {
